update diagrams